# CorpusMind

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json
.github/workflows/: build-release.yml  ci.yml  release.yml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: AI_AGENT_BUILD_PROMPT.md  ARCHITECTURE.md  BUILD_COMMANDS.md  BUILD_GUIDE.md  METHODOLOGY.md  SYSTEM_FRAMEWORK_FOR_NAPKIN.md  USER_GUIDE.md  USER_GUIDE_AR.md  ZENODO_DOI_GUIDE.md
download/: pre-release.html
engine/: corpusmind-engine.spec  pyproject.toml
engine/ai/: __init__.py  assistant.py  confidence.py  providers.py  query_suggestions.py  tools.py
engine/api/: ai.py  ai_provider_config.py  analysis.py  arabic.py  cleaning.py  corpora.py  export.py  health.py  hub.py  open_access.py  phase2.py  phase5.py  phase6.py  reference_corpus.py  research.py  system.py  troubleshoot.py  vision.py
engine/app/: __init__.py  logging.py  main.py  settings.py
engine/discourse/: service.py
engine/export_queue/: __init__.py
engine/hooks/: hook-en_core_web_sm.py
engine/ingestion/: __init__.py  cleaning.py  parsing.py  service.py
engine/multimodal/: alignment.py  discourse.py  visual_grammar.py
engine/nlp/arabic/: bilingual.py  pipeline.py
engine/nlp/general/: pipeline.py
engine/reference_corpus/: __init__.py  keyness_bridge.py  manager.py  manifest.py  registry.py
engine/stats/: measures.py  service.py
engine/storage/: encryption.py  models.py  research.py  session.py
engine/tests/: test_api.py  test_critical_issues.py  test_measures.py  test_phase2.py  test_phase3_arabic.py  test_phase4_vision.py  test_phase5_discourse.py  test_phase6.py
engine/vision/: facial.py  pipeline.py
infra/: .env.example  Dockerfile  docker-compose.yml  nginx.conf
reference-data/: README.md
reference-data/frameworks/: README.md  aristotle-rhetoric.yaml  barthes-semiotics.yaml  fairclough-cda.yaml  halliday-sfl.yaml  kress-van-leeuwen.yaml  lakoff-johnson-cmt.yaml  machin-mayr-mcda.yaml  martin-white-appraisal.yaml  peirce-semiotics.yaml  toulmin-argumentation.yaml  van-dijk-sca.yaml  wodak-dha.yaml
reference-data/reference-corpora/ar/: quranic-arabic-freq.tsv
reference-data/reference-corpora/en/: be06-freq-top1000.tsv  leipzig-english-news-top100.tsv
reference-data/wordlists/en/: top200.tsv
scripts/: REVIEW_AUDIT.md  REVIEW_AUDIT_PHASE2.md  build-corpusmind-mac.sh  build-corpusmind-windows.ps1  build-macos-arm64.sh  generate_arabic_guide_pdf.py  generate_user_guide_pdf.py  linux-launch.sh  phase1_smoke_test.sh  phase2_smoke_test.sh  phase3_smoke_test.sh  phase4_smoke_test.sh  start_engine_daemon.py
shared/: package.json  tsconfig.json
shared/src/: index.ts
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: CommandPalette.tsx  ConfirmDialog.tsx  ExportButton.tsx  OnboardingModal.tsx  Ribbon.tsx  Sidebar.tsx  ThemeToggle.tsx  TroubleshootingBar.tsx
web/src/hooks/: useEngineVersion.ts
web/src/lib/: api.ts  arabic-glossary.ts  i18n.ts
web/src/store/: app.ts  troubleshooting.ts  ui.ts
web/src/styles/: global.css
web/src/views/: AboutView.tsx  AnalysisView.tsx  ArabicView.tsx  AssistantView.tsx  ConcordancerView.tsx  CorpusHubView.tsx  CorpusManagerView.tsx  CorpusSelectionView.tsx  HomeView.tsx  SettingsView.tsx  TextView.tsx  UserGuideView.tsx  VisionView.tsx
