[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "corpusmind-engine"
version = "0.1.20"
description = "CorpusMind engine — local-first, AI-native research environment for corpus linguistics and multimodal discourse analysis."
readme = "../README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
    { name = "Dr. Waleed Mandour", email = "waleed.mandour@squ.edu.om" },
    { name = "Prof. Wesam Ibrahim" },
]
keywords = ["corpus-linguistics", "discourse-analysis", "nlp", "arabic", "multimodal", "visual-grammar", "cda", "tauri", "local-llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # HTTP client for model providers
    "httpx>=0.27.0",
    # Async helpers
    "anyio>=4.6.0",
    "tenacity>=9.0.0",
    # NLP — Phase 0 keeps these optional/lazy to keep install light;
    # they become required when their owning module is first activated in Phase 1+.
    # Listed here so a full install brings everything in.
    "spacy>=3.7.5",
    # Stats
    "numpy>=1.26",
    "scipy>=1.13",
    # NOTE: statsmodels and pingouin were removed — they were declared as deps
    # and force-bundled as PyInstaller hidden imports, but a repo-wide grep
    # confirmed they are never imported or used anywhere in the engine. Removing
    # them reduces bundle size, native DLL surface area, and AV false-positive risk.
    # Storage
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    # Reproducibility / provenance
    "pyyaml>=6.0.2",
    # Logging
    "structlog>=24.4.0",
    # OpenAPI / schema
    "openapi-core>=0.19.2",
    # --- Phase 1: ingestion + NLP + export ---
    # File parsing
    # NOTE: python-magic is NOT a dependency — it requires the native libmagic
    # DLL which is not available on Windows. The engine uses file extensions
    # for format detection (ingestion/parsing.py:detect_format), not libmagic.
    "beautifulsoup4>=4.12.3",
    "python-docx>=1.1.2",
    "pypdf>=5.1.0",
    "lxml>=5.3.0",
    # Encoding / language detection
    "charset-normalizer>=3.4.0",
    "langdetect>=1.0.9",
    # Export
    "openpyxl>=3.1.5",
    "reportlab>=4.2.5",
    # Web framework support — python-multipart is needed by FastAPI for
    # FormData / file uploads (UploadFile). Without it, POST /corpora/{cid}/documents
    # crashes with a 500. cryptography is needed by httpx for HTTPS to some
    # model provider endpoints. Both were previously only installed ad-hoc
    # in CI scripts; now they're proper declared dependencies.
    "python-multipart>=0.0.9",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
arabic = [
    # CAMeL Tools, SinaTools, Farasa — installed on demand in Phase 3.
    # Declared here so `pip install -e ".[arabic]"` is a one-shot.
    "camel-tools>=1.5.5",
]
vision = [
    "opencv-python>=4.10.0",
    "pillow>=11.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]
# Diagram (PNG) export for collocation networks. SVG export works without
# this — it's pure Python. PNG requires cairosvg which needs libcairo.
# Install with: pip install -e ".[export]"  (and libcairo on your system)
export = [
    "cairosvg>=2.7.0",
]

[project.scripts]
corpusmind-engine = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion", "nlp", "stats", "discourse", "vision", "multimodal", "ai", "storage", "api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = [
  "E501",   # line length — handled by formatter
  "B008",   # function-call-in-default-argument — FastAPI Depends() pattern is correct
  "N803",   # invalid-argument-name — many of our SQL column names use PascalCase (Token, etc.) intentionally
  "N806",   # non-lowercase-variable-in-function — same reason (ORM class names used as variables)
  "E741",   # ambiguous-variable-name — used in math-heavy code matching the literature (e.g. N, R, C)
  "RUF002", # ambiguous-unicode-character-docstring — we use Unicode math symbols (², ·, Σ) intentionally in METHODOLOGY
  "RUF003", # ambiguous-unicode-character-comment — same
  "RUF001", # ambiguous-unicode-character-string — the cleaning module intentionally includes real Unicode punctuation (‹›«»—–) in strip sets
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
